[package]
name = "article-history-rs"
version = "0.1.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
dtparse = "1.2.0"
parse_wiki_text = "0.1.5"
chrono = "0.4.19"
ureq = { version = "1.5.1", features = ["json"] }
#mediawiki = "0.2.3"
mediawiki = { path = "../../mediawiki_rust" }
config = "0.10.1"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
itertools = "0.9.0"
linked-hash-map = "0.5.3"
futures = "0.3.7"
regex = "1.4.1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
strum = "0.19.5"
strum_macros = "0.19.4"
