[package]
name = "cat-track"
version = "0.1.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
mediawiki = "0.2.5"
config = "0.11.0"
serde_json = "1.0.64"
chrono = "0.4.19"
openssl = { version = '0.10', features = [ "vendored" ] }

[profile.release]
lto = "fat"
codegen-units = 1
