[package]
name = "defcon-rs"
version = "0.1.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
mediawiki = "0.2.3"
chrono = "0.4.11"
regex = "1.3.6"
lazy_static = "1.4.0"
config = "0.10.1"
serde_json = "1.0.51"
tokio = "0.2.22"
openssl = { version = '0.10', features = [ "vendored" ] }

[profile.release]
lto = "fat"
codegen-units = 1
