[package]
name = "redirect-banners-rs"
version = "0.1.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
#mediawiki = "0.1.26"
mediawiki = { path = "../../mediawiki_rust" }
regex = "1.3.6"
chrono = "0.4.11"
config = "0.10.1"
serde_json = "1.0.51"
lazy_static = "1.4.0"
